# python-icebreaker

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CryoloExternalJob.py  IBExternalJob.py  LICENSE  MANIFEST.in  README.md  RELEASE.md  correct_path.py  ib_5fig.py  ib_external_job.py  ib_group_job.py  ib_group_template.star  ib_job.py  ib_job_template_FLATTEN_MODE.star  ib_job_template_GROUP_MODE.star  pyproject.toml  setup.cfg  star_appender.py
.azure-pipelines/: azure-pipelines.yml  ci-unix.yml  ci-windows.yml  flake8-validation.py
.github/workflows/: codeql.yml
IBscripts/: average_mask.py  correct_path.py  filter_designer_not_normalized.py  five_figures.py  ice_groups.py  icebreaker_equalize.py  icebreaker_equalize_multi.py  icebreaker_icegroups.py  listdir.py  local_mask.py  original_mask.py  original_mask_fast.py  original_mask_reduced.py  star_appender.py
src/icebreaker/: KMeans_segmenter.py  KNN_segmenter.py  average_mask.py  correct_path.py  filter_designer.py  filter_designer_not_normalized.py  five_figures.py  ib_job_template_FLATTEN_MODE.star  ib_job_template_GROUP_MODE.star  ice_groups.py  icebreaker_equalize_multi.py  icebreaker_icegroups_multi.py  listdir.py  local_mask.py  original_mask.py  original_mask_fast.py  plot_boxplots.py  show_gradient.py  star_appender.py  window_mean.py
src/icebreaker/cli/: ib_5fig.py  ib_group.py  ib_job.py  micrographs_enhance.py  micrographs_group.py  particles_group.py  stats.py
