[metadata]
name = icebreaker_em
version = 0.3.0

[options]
include_package_data = True
install_requires =
    gemmi
    matplotlib
    mrcfile
    numpy
    scipy
packages = find:
package_dir =
    =src
python_requires = >=3.6
zip_safe = False

[options.entry_points]
console_scripts =
    ib_group = icebreaker.cli.ib_group:main
    ib_job = icebreaker.cli.ib_job:main
    ib_5fig = icebreaker.cli.ib_5fig:main
libtbx.dispatcher.script =
    ib_group = ib_group
    ib_job = ib_job
    ib_5fig = ib_5fig

[options.packages.find]
where = src

[flake8]
max-line-length = 99