[metadata]
name = icebreaker_em
version = 0.3.6
license = BSD
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Download = https://github.com/DiamondLightSource/python-icebreaker/releases
    Documentation = https://github.com/DiamondLightSource/python-icebreaker
    GitHub = https://github.com/DiamondLightSource/python-icebreaker
    Bug-Tracker = https://github.com/DiamondLightSource/python-icebreaker/issues

[options]
include_package_data = True
install_requires =
    gemmi
    matplotlib
    mrcfile
    numpy
    opencv-python-headless
    scipy
packages = find:
package_dir =
    =src
python_requires = >=3.6
zip_safe = False

[options.entry_points]
console_scripts =
    ib_group = icebreaker.cli.ib_group:main
    ib_job = icebreaker.cli.ib_job:main
    ib_5fig = icebreaker.cli.ib_5fig:main
    ib.micrographs_group = icebreaker.cli.micrographs_group:main
    ib.micrographs_flatten = icebreaker.cli.micrographs_enhance:main
    ib.particles_group = icebreaker.cli.particles_group:main
    ib.five_fig = icebreaker.cli.stats:main
libtbx.dispatcher.script =
    ib_group = ib_group
    ib_job = ib_job
    ib_5fig = ib_5fig

[options.packages.find]
where = src

[flake8]
# Black disagrees with flake8 on a few points. Ignore those.
ignore = E203, E266, E501, W503
# E203 whitespace before ':'
# E266 too many leading '#' for block comment
# E501 line too long
# W503 line break before binary operator

max-line-length = 88
